gr8_parser.output
   0  $accept : file $end

   1  file : listd
   2       |

   3  listd : decl
   4        | listd decl

   5  decl : func_decl ';'
   6       | procedure_decl ';'
   7       | func
   8       | procedure
   9       | var ';'
  10       | tUSE type tIDENTIFIER ';'

  11  func_decl : tPUBLIC type tFUNCTION tIDENTIFIER tUSES vars
  12            | type tFUNCTION tIDENTIFIER tUSES vars
  13            | tPUBLIC type tFUNCTION tIDENTIFIER
  14            | type tFUNCTION tIDENTIFIER

  15  procedure_decl : tPUBLIC tPROCEDURE tIDENTIFIER tUSES vars
  16                 | tPROCEDURE tIDENTIFIER tUSES vars
  17                 | tPUBLIC tPROCEDURE tIDENTIFIER
  18                 | tPROCEDURE tIDENTIFIER

  19  vars : var
  20       | vars ',' var

  21  var : tPUBLIC type tIDENTIFIER '(' tINITIALLY expr ')'
  22      | type tIDENTIFIER '(' tINITIALLY expr ')'
  23      | tPUBLIC type tIDENTIFIER
  24      | type tIDENTIFIER

  25  listi : instruction
  26        | listi instruction

  27  func : tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER tAS block
  28       | tDEFINE type tFUNCTION tIDENTIFIER tAS block
  29       | tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER tON vars tAS block
  30       | tDEFINE type tFUNCTION tIDENTIFIER tON vars tAS block

  31  procedure : tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tAS block
  32            | tDEFINE tPROCEDURE tIDENTIFIER tAS block
  33            | tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tON vars tAS block
  34            | tDEFINE tPROCEDURE tIDENTIFIER tON vars tAS block

  35  block : ';' '{' listd listi '}'
  36        | ';' '{' listd '}'
  37        | ';' '{' listi '}'
  38        | ';' '{' '}'

  39  type : tINT
  40       | tREAL
  41       | tNEWS
  42       | smalls tFAKE
  43       | huges tFAKE
  44       | fakes tNEWS

  45  smalls : tINT
  46         | smalls tINT

  47  huges : tREAL
  48        | huges tREAL

  49  fakes : tFAKE
  50        | fakes tFAKE

  51  instruction : expr ';'
  52              | tTWEET expr ';'
  53              | tPOST expr ';'
  54              | tAGAIN tINTEGER ';'
  55              | tAGAIN ';'
  56              | tSTOP tINTEGER ';'
  57              | tSTOP ';'
  58              | tRETURN expr ';'
  59              | tRETURN ';'
  60              | block ';'
  61              | assignment ';'
  62              | sweep
  63              | if

  64  if : tIF expr tTHEN block tELIF elsif
  65     | tIF expr tTHEN block
  66     | tIF expr tTHEN block tELSE block

  67  elsif : expr tTHEN block
  68        | expr tTHEN block tELSE block
  69        | elsif tELIF expr tTHEN block
  70        | elsif tELIF expr tTHEN block tELSE block

  71  assignment : tASSIGN expr tTO lval

  72  sweep : tSWEEPING lval tFROM expr tTO expr tBY expr tDO block
  73        | tSWEEPING lval tFROM expr tTO expr tDO block

  74  expr : tINTEGER
  75       | strings
  76       | tDOUBLE
  77       | tNULL
  78       | tREAD
  79       | expr tOBJECTS
  80       | tNOT expr
  81       | '-' expr
  82       | '+' expr
  83       | expr '+' expr
  84       | expr '-' expr
  85       | expr '*' expr
  86       | expr '/' expr
  87       | expr '%' expr
  88       | expr '<' expr
  89       | expr '>' expr
  90       | expr tEQ expr
  91       | expr tAND expr
  92       | expr tOR expr
  93       | lval '?'
  94       | specialexpr

  95  strings : tSTRING
  96          | strings tSTRING

  97  param : expr
  98        | param ',' expr

  99  lval : tIDENTIFIER
 100       | tCELL expr tAT specialexpr

 101  specialexpr : tDO tIDENTIFIER
 102              | tUSE param tFOR tIDENTIFIER
 103              | lval
 104              | '(' expr ')'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tDEFINE  shift 1
	tPUBLIC  shift 2
	tPROCEDURE  shift 3
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	tUSE  shift 8
	$end  reduce 2

	file  goto 9
	listd  goto 10
	type  goto 11
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	func_decl  goto 15
	procedure_decl  goto 16
	decl  goto 17
	var  goto 18
	func  goto 19
	procedure  goto 20


state 1
	func : tDEFINE . tPUBLIC type tFUNCTION tIDENTIFIER tAS block  (27)
	func : tDEFINE . type tFUNCTION tIDENTIFIER tAS block  (28)
	func : tDEFINE . tPUBLIC type tFUNCTION tIDENTIFIER tON vars tAS block  (29)
	func : tDEFINE . type tFUNCTION tIDENTIFIER tON vars tAS block  (30)
	procedure : tDEFINE . tPUBLIC tPROCEDURE tIDENTIFIER tAS block  (31)
	procedure : tDEFINE . tPROCEDURE tIDENTIFIER tAS block  (32)
	procedure : tDEFINE . tPUBLIC tPROCEDURE tIDENTIFIER tON vars tAS block  (33)
	procedure : tDEFINE . tPROCEDURE tIDENTIFIER tON vars tAS block  (34)

	tPUBLIC  shift 21
	tPROCEDURE  shift 22
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	type  goto 23
	smalls  goto 12
	huges  goto 13
	fakes  goto 14


state 2
	func_decl : tPUBLIC . type tFUNCTION tIDENTIFIER tUSES vars  (11)
	func_decl : tPUBLIC . type tFUNCTION tIDENTIFIER  (13)
	procedure_decl : tPUBLIC . tPROCEDURE tIDENTIFIER tUSES vars  (15)
	procedure_decl : tPUBLIC . tPROCEDURE tIDENTIFIER  (17)
	var : tPUBLIC . type tIDENTIFIER '(' tINITIALLY expr ')'  (21)
	var : tPUBLIC . type tIDENTIFIER  (23)

	tPROCEDURE  shift 24
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	type  goto 25
	smalls  goto 12
	huges  goto 13
	fakes  goto 14


state 3
	procedure_decl : tPROCEDURE . tIDENTIFIER tUSES vars  (16)
	procedure_decl : tPROCEDURE . tIDENTIFIER  (18)

	tIDENTIFIER  shift 26
	.  error


state 4
	type : tINT .  (39)
	smalls : tINT .  (45)

	tIDENTIFIER  reduce 39
	tFUNCTION  reduce 39
	tINT  reduce 45
	tFAKE  reduce 45


state 5
	type : tREAL .  (40)
	huges : tREAL .  (47)

	tIDENTIFIER  reduce 40
	tFUNCTION  reduce 40
	tREAL  reduce 47
	tFAKE  reduce 47


state 6
	type : tNEWS .  (41)

	.  reduce 41


state 7
	fakes : tFAKE .  (49)

	.  reduce 49


state 8
	decl : tUSE . type tIDENTIFIER ';'  (10)

	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	type  goto 27
	smalls  goto 12
	huges  goto 13
	fakes  goto 14


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	file : listd .  (1)
	listd : listd . decl  (4)

	tDEFINE  shift 1
	tPUBLIC  shift 2
	tPROCEDURE  shift 3
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	tUSE  shift 8
	$end  reduce 1

	type  goto 11
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	func_decl  goto 15
	procedure_decl  goto 16
	decl  goto 28
	var  goto 18
	func  goto 19
	procedure  goto 20


state 11
	func_decl : type . tFUNCTION tIDENTIFIER tUSES vars  (12)
	func_decl : type . tFUNCTION tIDENTIFIER  (14)
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (22)
	var : type . tIDENTIFIER  (24)

	tIDENTIFIER  shift 29
	tFUNCTION  shift 30
	.  error


state 12
	type : smalls . tFAKE  (42)
	smalls : smalls . tINT  (46)

	tINT  shift 31
	tFAKE  shift 32
	.  error


state 13
	type : huges . tFAKE  (43)
	huges : huges . tREAL  (48)

	tREAL  shift 33
	tFAKE  shift 34
	.  error


state 14
	type : fakes . tNEWS  (44)
	fakes : fakes . tFAKE  (50)

	tNEWS  shift 35
	tFAKE  shift 36
	.  error


state 15
	decl : func_decl . ';'  (5)

	';'  shift 37
	.  error


state 16
	decl : procedure_decl . ';'  (6)

	';'  shift 38
	.  error


state 17
	listd : decl .  (3)

	.  reduce 3


state 18
	decl : var . ';'  (9)

	';'  shift 39
	.  error


state 19
	decl : func .  (7)

	.  reduce 7


state 20
	decl : procedure .  (8)

	.  reduce 8


state 21
	func : tDEFINE tPUBLIC . type tFUNCTION tIDENTIFIER tAS block  (27)
	func : tDEFINE tPUBLIC . type tFUNCTION tIDENTIFIER tON vars tAS block  (29)
	procedure : tDEFINE tPUBLIC . tPROCEDURE tIDENTIFIER tAS block  (31)
	procedure : tDEFINE tPUBLIC . tPROCEDURE tIDENTIFIER tON vars tAS block  (33)

	tPROCEDURE  shift 40
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	type  goto 41
	smalls  goto 12
	huges  goto 13
	fakes  goto 14


state 22
	procedure : tDEFINE tPROCEDURE . tIDENTIFIER tAS block  (32)
	procedure : tDEFINE tPROCEDURE . tIDENTIFIER tON vars tAS block  (34)

	tIDENTIFIER  shift 42
	.  error


state 23
	func : tDEFINE type . tFUNCTION tIDENTIFIER tAS block  (28)
	func : tDEFINE type . tFUNCTION tIDENTIFIER tON vars tAS block  (30)

	tFUNCTION  shift 43
	.  error


state 24
	procedure_decl : tPUBLIC tPROCEDURE . tIDENTIFIER tUSES vars  (15)
	procedure_decl : tPUBLIC tPROCEDURE . tIDENTIFIER  (17)

	tIDENTIFIER  shift 44
	.  error


state 25
	func_decl : tPUBLIC type . tFUNCTION tIDENTIFIER tUSES vars  (11)
	func_decl : tPUBLIC type . tFUNCTION tIDENTIFIER  (13)
	var : tPUBLIC type . tIDENTIFIER '(' tINITIALLY expr ')'  (21)
	var : tPUBLIC type . tIDENTIFIER  (23)

	tIDENTIFIER  shift 45
	tFUNCTION  shift 46
	.  error


state 26
	procedure_decl : tPROCEDURE tIDENTIFIER . tUSES vars  (16)
	procedure_decl : tPROCEDURE tIDENTIFIER .  (18)

	tUSES  shift 47
	';'  reduce 18


state 27
	decl : tUSE type . tIDENTIFIER ';'  (10)

	tIDENTIFIER  shift 48
	.  error


state 28
	listd : listd decl .  (4)

	.  reduce 4


state 29
	var : type tIDENTIFIER . '(' tINITIALLY expr ')'  (22)
	var : type tIDENTIFIER .  (24)

	'('  shift 49
	tAS  reduce 24
	';'  reduce 24
	','  reduce 24


state 30
	func_decl : type tFUNCTION . tIDENTIFIER tUSES vars  (12)
	func_decl : type tFUNCTION . tIDENTIFIER  (14)

	tIDENTIFIER  shift 50
	.  error


state 31
	smalls : smalls tINT .  (46)

	.  reduce 46


state 32
	type : smalls tFAKE .  (42)

	.  reduce 42


state 33
	huges : huges tREAL .  (48)

	.  reduce 48


state 34
	type : huges tFAKE .  (43)

	.  reduce 43


state 35
	type : fakes tNEWS .  (44)

	.  reduce 44


state 36
	fakes : fakes tFAKE .  (50)

	.  reduce 50


state 37
	decl : func_decl ';' .  (5)

	.  reduce 5


state 38
	decl : procedure_decl ';' .  (6)

	.  reduce 6


state 39
	decl : var ';' .  (9)

	.  reduce 9


state 40
	procedure : tDEFINE tPUBLIC tPROCEDURE . tIDENTIFIER tAS block  (31)
	procedure : tDEFINE tPUBLIC tPROCEDURE . tIDENTIFIER tON vars tAS block  (33)

	tIDENTIFIER  shift 51
	.  error


state 41
	func : tDEFINE tPUBLIC type . tFUNCTION tIDENTIFIER tAS block  (27)
	func : tDEFINE tPUBLIC type . tFUNCTION tIDENTIFIER tON vars tAS block  (29)

	tFUNCTION  shift 52
	.  error


state 42
	procedure : tDEFINE tPROCEDURE tIDENTIFIER . tAS block  (32)
	procedure : tDEFINE tPROCEDURE tIDENTIFIER . tON vars tAS block  (34)

	tAS  shift 53
	tON  shift 54
	.  error


state 43
	func : tDEFINE type tFUNCTION . tIDENTIFIER tAS block  (28)
	func : tDEFINE type tFUNCTION . tIDENTIFIER tON vars tAS block  (30)

	tIDENTIFIER  shift 55
	.  error


state 44
	procedure_decl : tPUBLIC tPROCEDURE tIDENTIFIER . tUSES vars  (15)
	procedure_decl : tPUBLIC tPROCEDURE tIDENTIFIER .  (17)

	tUSES  shift 56
	';'  reduce 17


state 45
	var : tPUBLIC type tIDENTIFIER . '(' tINITIALLY expr ')'  (21)
	var : tPUBLIC type tIDENTIFIER .  (23)

	'('  shift 57
	tAS  reduce 23
	';'  reduce 23
	','  reduce 23


state 46
	func_decl : tPUBLIC type tFUNCTION . tIDENTIFIER tUSES vars  (11)
	func_decl : tPUBLIC type tFUNCTION . tIDENTIFIER  (13)

	tIDENTIFIER  shift 58
	.  error


state 47
	procedure_decl : tPROCEDURE tIDENTIFIER tUSES . vars  (16)

	tPUBLIC  shift 59
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	vars  goto 60
	type  goto 61
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	var  goto 62


state 48
	decl : tUSE type tIDENTIFIER . ';'  (10)

	';'  shift 63
	.  error


state 49
	var : type tIDENTIFIER '(' . tINITIALLY expr ')'  (22)

	tINITIALLY  shift 64
	.  error


state 50
	func_decl : type tFUNCTION tIDENTIFIER . tUSES vars  (12)
	func_decl : type tFUNCTION tIDENTIFIER .  (14)

	tUSES  shift 65
	';'  reduce 14


state 51
	procedure : tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER . tAS block  (31)
	procedure : tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER . tON vars tAS block  (33)

	tAS  shift 66
	tON  shift 67
	.  error


state 52
	func : tDEFINE tPUBLIC type tFUNCTION . tIDENTIFIER tAS block  (27)
	func : tDEFINE tPUBLIC type tFUNCTION . tIDENTIFIER tON vars tAS block  (29)

	tIDENTIFIER  shift 68
	.  error


state 53
	procedure : tDEFINE tPROCEDURE tIDENTIFIER tAS . block  (32)

	';'  shift 69
	.  error

	block  goto 70


state 54
	procedure : tDEFINE tPROCEDURE tIDENTIFIER tON . vars tAS block  (34)

	tPUBLIC  shift 59
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	vars  goto 71
	type  goto 61
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	var  goto 62


state 55
	func : tDEFINE type tFUNCTION tIDENTIFIER . tAS block  (28)
	func : tDEFINE type tFUNCTION tIDENTIFIER . tON vars tAS block  (30)

	tAS  shift 72
	tON  shift 73
	.  error


state 56
	procedure_decl : tPUBLIC tPROCEDURE tIDENTIFIER tUSES . vars  (15)

	tPUBLIC  shift 59
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	vars  goto 74
	type  goto 61
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	var  goto 62


state 57
	var : tPUBLIC type tIDENTIFIER '(' . tINITIALLY expr ')'  (21)

	tINITIALLY  shift 75
	.  error


state 58
	func_decl : tPUBLIC type tFUNCTION tIDENTIFIER . tUSES vars  (11)
	func_decl : tPUBLIC type tFUNCTION tIDENTIFIER .  (13)

	tUSES  shift 76
	';'  reduce 13


state 59
	var : tPUBLIC . type tIDENTIFIER '(' tINITIALLY expr ')'  (21)
	var : tPUBLIC . type tIDENTIFIER  (23)

	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	type  goto 77
	smalls  goto 12
	huges  goto 13
	fakes  goto 14


state 60
	procedure_decl : tPROCEDURE tIDENTIFIER tUSES vars .  (16)
	vars : vars . ',' var  (20)

	','  shift 78
	';'  reduce 16


state 61
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (22)
	var : type . tIDENTIFIER  (24)

	tIDENTIFIER  shift 29
	.  error


state 62
	vars : var .  (19)

	.  reduce 19


state 63
	decl : tUSE type tIDENTIFIER ';' .  (10)

	.  reduce 10


state 64
	var : type tIDENTIFIER '(' tINITIALLY . expr ')'  (22)

	tINTEGER  shift 79
	tIDENTIFIER  shift 80
	tSTRING  shift 81
	tDOUBLE  shift 82
	tREAD  shift 83
	tDO  shift 84
	tNOT  shift 85
	tUSE  shift 86
	tCELL  shift 87
	tNULL  shift 88
	'+'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	expr  goto 92
	specialexpr  goto 93
	lval  goto 94
	strings  goto 95


state 65
	func_decl : type tFUNCTION tIDENTIFIER tUSES . vars  (12)

	tPUBLIC  shift 59
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	vars  goto 96
	type  goto 61
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	var  goto 62


state 66
	procedure : tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tAS . block  (31)

	';'  shift 69
	.  error

	block  goto 97


state 67
	procedure : tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tON . vars tAS block  (33)

	tPUBLIC  shift 59
	tINT  shift 4
	tREAL  shift 5
	tNEWS  shift 6
	tFAKE  shift 7
	.  error

	vars  goto 98
	type  goto 61
	smalls  goto 12
	huges  goto 13
	fakes  goto 14
	var  goto 62


state 68
	func : tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER . tAS block  (27)
	func : tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER . tON vars tAS block  (29)

	tAS  shift 99
	tON  shift 100
	.  error


state 69
	block : ';' . '{' listd listi '}'  (35)
	block : ';' . '{' listd '}'  (36)
	block : ';' . '{' listi '}'  (37)
	block : ';' . '{' '}'  (38)

	'{'  shift 101
	.  error


state 70
	procedure : tDEFINE tPROCEDURE tIDENTIFIER tAS block .  (32)

	.  reduce 32

